--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>com.eazy</groupId>
 		<artifactId>Microservice</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>accounts</artifactId>
-	<version>${parent.version}</version>
-	<name>accounts</name>
-	<description>Microservice for accounts</description>
+	<artifactId>cards</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>cards</name>
+	<description>Microservice for loans</description>
 	<properties>
 		<java.version>17</java.version>
 		<core.version>1.0.0</core.version>
@@ -51,12 +49,6 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
