--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,15 +5,11 @@
 	<parent>
 		<groupId>com.eazy</groupId>
 		<artifactId>Microservice</artifactId>
-		<version>1.0.0</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>com.eazy.core</artifactId>
-	<version>1.0.0</version>
 	<name>core</name>
 	<description>Microservice Core</description>
-	<properties>
-		<java.version>17</java.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
