--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -5,16 +5,11 @@
 	<parent>
 		<groupId>com.eazy</groupId>
 		<artifactId>Microservice</artifactId>
-		<version>1.0.0</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>loans</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>loans</name>
 	<description>Microservice for loans</description>
-	<properties>
-		<java.version>17</java.version>
-		<core.version>1.0.0</core.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -62,7 +57,7 @@
 		<dependency>
 			<groupId>com.eazy</groupId>
 			<artifactId>com.eazy.core</artifactId>
-			<version>${core.version}</version>
+			<version>${revision}</version>
 		</dependency>
 	</dependencies>
 
