--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>com.eazy.core</artifactId>
 			<version>${revision}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
