--- a/accounts/bin/pom.xml
+++ b/accounts/bin/pom.xml
@@ -10,11 +10,10 @@
 		<!--  lookup parent from repository  -->
 	</parent>
 	<groupId>com.eazy</groupId>
-	<artifactId>cards</artifactId>
+	<artifactId>accounts</artifactId>
 	<version>1.0.0</version>
-	<packaging>jar</packaging>
-	<name>cards</name>
-	<description>Microservice for loans</description>
+	<name>accounts</name>
+	<description>Microservice for accounts</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -26,10 +25,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,7 +58,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.eazy</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>com.eazy.core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
@@ -79,16 +74,6 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>jib-maven-plugin</artifactId>
-				<version>3.4.0</version>
-				<configuration>
-					<to>
-						<image>qzy111/${project.name}:v1</image>
-					</to>
 				</configuration>
 			</plugin>
 		</plugins>
