--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,17 +1,28 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.eazy</groupId>
-		<artifactId>Microservice</artifactId>
-		<version>${revision}</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.2.1</version>
+		<relativePath />
+		<!--  lookup parent from repository  -->
 	</parent>
-	<artifactId>com.eazy.core</artifactId>
-	<name>core</name>
+	<groupId>com.eazy</groupId>
+	<artifactId>core</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
+	<name>core</name>
 	<description>Microservice Core</description>
+	<properties>
+		<java.version>17</java.version>
+	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -32,6 +43,5 @@
 			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
-
 	
 </project>
