--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.1</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
-
-	<groupId>com.eazy</groupId>
-	<artifactId>Microservice</artifactId>
-	<version>${revision}</version>
-	<packaging>pom</packaging>
-
-	<properties>
-		<java.version>17</java.version>
-		<revision>1.0.0</revision>
-	</properties>
-
-	<modules>
-		<module>core</module>
-		<module>accounts</module>
-		<module>loans</module>
-		<module>cards</module>
-	</modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.eazy</groupId>
+  <artifactId>Microservice</artifactId>
+  <version>1.0.0</version>
+  <packaging>pom</packaging>
+  
+  <modules>
+	  <module>core</module>
+	  <module>accounts</module>
+	  <module>cards</module>
+	  <module>loans</module>  	
+  </modules>
 </project>
