--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -81,6 +81,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.0</version>
+				<configuration>
+					<to>
+						<image>qzy111/${project.name}:v1</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
