--- a/accounts/src/main/resources/application.yaml
+++ b/accounts/src/main/resources/application.yaml
@@ -14,3 +14,12 @@ spring:
       hibernate:
          ddl-auto: update
       show-sql: true
+
+accounts:
+   message: "Welcome to Eazy Accounts API"
+   contactDetails:
+      name: "Jim Yeung"
+      email: "qzy114@gmail.com"
+   onCallSupport:
+      - (555)444-1234
+      - (555)444-1235
