--- a/accounts/src/main/resources/application.yaml
+++ b/accounts/src/main/resources/application.yaml
@@ -1,25 +1,27 @@
 server:
-   port: 8080
+  port: 8080
 spring:
-   datasource:
-      url: jdbc:h2:mem:testdb
-      driverClassName: org.h2.Driver
-      username: sa
-      password: ''
-   h2:
-      console:
-         enable: true
-   jpa:
-      database-platform: org.hibernate.dialect.H2Dialect
-      hibernate:
-         ddl-auto: update
+  application:
+    name: "accounts"
+  profiles:
+    active: "prod"
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+  h2:
+    console:
+      enable: true
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
       show-sql: true
-
-accounts:
-   message: "Welcome to Eazy Accounts API"
-   contactDetails:
-      name: "Jim Yeung"
-      email: "qzy114@gmail.com"
-   onCallSupport:
-      - (555)444-1234
-      - (555)444-1235
+  config:
+    import: "configserver:http://localhost:8071"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
