--- a/cards/src/main/resources/application.yaml
+++ b/cards/src/main/resources/application.yaml
@@ -1,16 +1,28 @@
 server:
-   port: 9000
+  port: 9000
 spring:
-   datasource:
-      url: jdbc:h2:mem:testdb
-      driverClassName: org.h2.Driver
-      username: sa
-      password: ''
-   h2:
-      console:
-         enable: true
-   jpa:
-      database-platform: org.hibernate.dialect.H2Dialect
-      hibernate:
-         ddl-auto: update
+  application:
+    name: "accounts"
+  profiles:
+    active: "prod"
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+  h2:
+    console:
+      enable: true
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
       show-sql: true
+  config:
+    import: "configserver:http://localhost:8071"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
