--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,15 @@
 services:
+   configserver:
+      image: "qzy111/configserver:v1"
+      container_name: configserver_ms
+      ports:
+         - "8071:8071"
+      deploy:
+         resources:
+            limits:
+               memory: 700m
+      networks:
+         - "eazyNetwork"
    accounts:
       image: "qzy111/accounts:v1"
       container_name: accounts_ms
@@ -34,7 +45,7 @@ services:
                memory: 700m
       networks:
          - "eazyNetwork"
-      
+
 networks:
    eazyNetwork:
       driver: "bridge"
