--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,70 @@
 services:
+   rabbit:
+      image: rabbitmq:3.12-management
+      hostname: rabbitmq
+      ports:
+         - "5672:5672"
+         - "15672:15672"
+      healthcheck:
+         test: rabbitmq-diagnostics check_port_connectivity
+         interval: 10s
+         timeout: 5s
+         retries: 5
+         start_period: 5s
+      extends:
+         file: common-config.yml
+         service: network-deploy-service
+   
    configserver:
       image: "qzy111/configserver:v1"
       container_name: configserver_ms
       ports:
          - "8071:8071"
-      deploy:
-         resources:
-            limits:
-               memory: 700m
-      networks:
-         - "eazyNetwork"
+      depends_on:
+         rabbit:
+            condition: service_healthy
+      healthcheck:
+         test: "curl --fail --lilent localhost:8071/actuator/health/readiness | grep UP || exit 1"
+         interval: 10s
+         timeout: 5s
+         retries: 5
+         start_period: 10s
+      extends:
+         file: common-config.yml
+         service: microservice-base-config
+   
    accounts:
       image: "qzy111/accounts:v1"
       container_name: accounts_ms
       ports:
          - "8080:8080"
-      deploy:
-         resources:
-            limits:
-               memory: 700m
-      networks:
-         - "eazyNetwork"
+      environment:
+         SPRING_APPLICATION_NAME: "accounts"
+      extends:
+         file: common-config.yml
+         service: microservice-configserver-config
                
    loans:
       image: "qzy111/loans:v1"
       container_name: loans_ms
       ports:
          - "8090:8090"
-      deploy:
-         resources:
-            limits:
-               memory: 700m
-      networks:
-         - "eazyNetwork"
-               
+      environment:
+         SPRING_APPLICATION_NAME: "loans"
+      extends:
+         file: common-config.yml
+         service: microservice-configserver-config
+
    cards:
       image: "qzy111/cards:v1"
       container_name: cards_ms
       ports:
          - "9000:9000"
-      deploy:
-         resources:
-            limits:
-               memory: 700m
-      networks:
-         - "eazyNetwork"
+      environment:
+         SPRING_APPLICATION_NAME: "loans"
+      extends:
+         file: common-config.yml
+         service: microservice-configserver-config
 
 networks:
    eazyNetwork:
