--- a/cards/src/main/resources/application.yaml
+++ b/cards/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 9000
 spring:
   application:
-    name: "accounts"
+    name: "cards"
   profiles:
     active: "prod"
   datasource:
