--- a/common-config.yml
+++ b/common-config.yml
@@ -1,7 +1,7 @@
 services:
   network-deploy-service:
-    network:
-      - "eazyNetwork"
+    networks:
+      - eazyNetwork
   
   microservice-base-config:
     extends:
@@ -10,11 +10,15 @@ services:
         resources:
           limits:
             memory: 700m
+    environment:
+      SPRING_RABBITMQ_HOST: "rabbit"
   
   microservice-configserver-config:
+    extends:
+      service: microservice-base-config
     depends_on:
       rabbit:
         condition: service_healthy
     environment:
-      SPRING_PROFILE_ACTIVE: default
-      SPRING_CONFIG_IMPORT: "configserver:http://configserver:8071"
+      SPRING_PROFILES_ACTIVE: prod
+      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
