--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,15 @@ services:
          service: network-deploy-service
    
    configserver:
-      image: "qzy111/configserver:v2"
-      container_name: configserver_ms
+      image: "qzy111/configserver:v3"
+      container_name: ms_configserver
       ports:
          - "8071:8071"
       depends_on:
          rabbit:
             condition: service_healthy
       healthcheck:
-         test: "curl --fail --lilent localhost:8071/actuator/health/readiness | grep UP || exit 1"
+         test: "curl --fail --silent configserver:8071/actuator/health/readiness | grep UP || exit 1"
          interval: 10s
          timeout: 5s
          retries: 5
@@ -34,8 +34,8 @@ services:
          service: microservice-base-config
    
    accounts:
-      image: "qzy111/accounts:v2"
-      container_name: accounts_ms
+      image: "qzy111/accounts:v3"
+      container_name: ms_accounts
       ports:
          - "8080:8080"
       environment:
@@ -45,8 +45,8 @@ services:
          service: microservice-configserver-config
                
    loans:
-      image: "qzy111/loans:v2"
-      container_name: loans_ms
+      image: "qzy111/loans:v3"
+      container_name: ms_loans
       ports:
          - "8090:8090"
       environment:
@@ -56,12 +56,12 @@ services:
          service: microservice-configserver-config
 
    cards:
-      image: "qzy111/cards:v2"
-      container_name: cards_ms
+      image: "qzy111/cards:v3"
+      container_name: ms_cards
       ports:
          - "9000:9000"
       environment:
-         SPRING_APPLICATION_NAME: "loans"
+         SPRING_APPLICATION_NAME: "cards"
       extends:
          file: common-config.yml
          service: microservice-configserver-config
