--- a/loans/src/main/resources/application.yaml
+++ b/loans/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 8090
 spring:
   application:
-    name: "accounts"
+    name: "loans"
   profiles:
     active: "prod"
   datasource:
