--- a/common-config.yml
+++ b/common-config.yml
@@ -2,23 +2,23 @@ services:
   network-deploy-service:
     networks:
       - eazyNetwork
-  
+
   microservice-base-config:
     extends:
       service: network-deploy-service
     deploy:
-        resources:
-          limits:
-            memory: 700m
+      resources:
+        limits:
+          memory: 700m
     environment:
       SPRING_RABBITMQ_HOST: "rabbit"
-  
+
   microservice-configserver-config:
     extends:
       service: microservice-base-config
     depends_on:
-      rabbit:
+      configserver:
         condition: service_healthy
     environment:
-      SPRING_PROFILES_ACTIVE: prod
+      SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
