--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,73 +1,71 @@
 services:
-   rabbit:
-      image: rabbitmq:3.12-management
-      hostname: rabbitmq
-      ports:
-         - "5672:5672"
-         - "15672:15672"
-      healthcheck:
-         test: rabbitmq-diagnostics check_port_connectivity
-         interval: 10s
-         timeout: 5s
-         retries: 5
-         start_period: 5s
-      extends:
-         file: common-config.yml
-         service: network-deploy-service
-   
-   configserver:
-      image: "qzy111/configserver:v3"
-      container_name: ms_configserver
-      ports:
-         - "8071:8071"
-      depends_on:
-         rabbit:
-            condition: service_healthy
-      healthcheck:
-         test: "curl --fail --silent configserver:8071/actuator/health/readiness | grep UP || exit 1"
-         interval: 10s
-         timeout: 5s
-         retries: 5
-         start_period: 10s
-      extends:
-         file: common-config.yml
-         service: microservice-base-config
-   
-   accounts:
-      image: "qzy111/accounts:v3"
-      container_name: ms_accounts
-      ports:
-         - "8080:8080"
-      environment:
-         SPRING_APPLICATION_NAME: "accounts"
-      extends:
-         file: common-config.yml
-         service: microservice-configserver-config
-               
-   loans:
-      image: "qzy111/loans:v3"
-      container_name: ms_loans
-      ports:
-         - "8090:8090"
-      environment:
-         SPRING_APPLICATION_NAME: "loans"
-      extends:
-         file: common-config.yml
-         service: microservice-configserver-config
+  rabbit:
+    image: rabbitmq:3.12-management
+    hostname: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: rabbitmq-diagnostics check_port_connectivity
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
 
-   cards:
-      image: "qzy111/cards:v3"
-      container_name: ms_cards
-      ports:
-         - "9000:9000"
-      environment:
-         SPRING_APPLICATION_NAME: "cards"
-      extends:
-         file: common-config.yml
-         service: microservice-configserver-config
+  configserver:
+    image: "qzy111/configserver:v3"
+    container_name: configserver-ms
+    ports:
+      - "8071:8071"
+    depends_on:
+      rabbit:
+        condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
+
+  accounts:
+    image: "qzy111/accounts:v3"
+    container_name: accounts-ms
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_APPLICATION_NAME: "accounts"
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
+  loans:
+    image: "qzy111/loans:v3"
+    container_name: loans-ms
+    ports:
+      - "8090:8090"
+    environment:
+      SPRING_APPLICATION_NAME: "loans"
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
+  cards:
+    image: "qzy111/cards:v3"
+    container_name: cards-ms
+    ports:
+      - "9000:9000"
+    environment:
+      SPRING_APPLICATION_NAME: "cards"
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
 
 networks:
-   eazyNetwork:
-      driver: "bridge"
-            
-      
+  eazyNetwork:
+    driver: "bridge"
