--- a/cards/src/main/resources/application.yaml
+++ b/cards/src/main/resources/application.yaml
@@ -5,10 +5,15 @@ spring:
     name: "cards"
   profiles:
     active: "prod"
+  #datasource:
+  #  url: jdbc:mysql://localhost:3306/accountsdb
+  #  username: root
+  #  password: 1122
   datasource:
-    url: jdbc:mysql://localhost:3307/cardsdb
-    username: root
-    password: 1122
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
 
   jpa:
     show-sql: true
