--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -72,6 +72,10 @@
 			<version>2.3.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.eazy</groupId>
 			<artifactId>core</artifactId>
 			<version>1.0.0</version>
