--- a/accounts/src/main/resources/application.yaml
+++ b/accounts/src/main/resources/application.yaml
@@ -5,10 +5,6 @@ spring:
     name: "accounts"
   profiles:
     active: "prod"
-  #datasource:
-  #  url: jdbc:mysql://localhost:3306/accountsdb
-  #  username: root
-  #  password: 1122
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -28,5 +24,30 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown: 
+      enabled: true
+  info:
+    env:
+      enabled: true
     refresh:
       enabled: true
+ 
+endpoints:
+  shutdown:
+    enabled: true
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEurka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "accounts"
+    description: "Eazy Accounts Application"
+    version: "1.0.0"
