--- a/cards/src/main/resources/application.yaml
+++ b/cards/src/main/resources/application.yaml
@@ -28,3 +28,30 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown: 
+      enabled: true
+  info:
+    env:
+      enabled: true
+    refresh:
+      enabled: true
+ 
+endpoints:
+  shutdown:
+    enabled: true
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEurka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "cards"
+    description: "Eazy Cards Application"
+    version: "1.0.0"
