--- a/common-config.yml
+++ b/common-config.yml
@@ -3,7 +3,7 @@ services:
     networks:
       - eazyNetwork
   
-  microservice-db-config:
+  microservice-mysqldb-config:
     extends:
       service: network-deploy-service
     image: mysql
@@ -33,5 +33,12 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: 1122
+
+  microservice-eureka-config:
+    extends:
+      service: microservice-configserver-config
+    depends_on:
+      eurekaserver:
+        condition: service_healthy
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
