--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.eazy</groupId>
-  <artifactId>Microservice</artifactId>
-  <version>1.0.0</version>
-  <packaging>pom</packaging>
-  
-  <modules>
-	  <module>core</module>
-	  <module>accounts</module>
-	  <module>cards</module>
-	  <module>loans</module> 
-	  <module>configserver</module>
-	  <module>eurekaserver</module> 	 	
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.eazy</groupId>
+	<artifactId>Microservice</artifactId>
+	<version>1.0.0</version>
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>configserver</module>
+		<module>eurekaserver</module>
+		<module>gatewayserver</module>
+		<module>core</module>
+		<module>accounts</module>
+		<module>cards</module>
+		<module>loans</module>
+
+	</modules>
 </project>
