--- a/accounts/src/main/resources/application.yaml
+++ b/accounts/src/main/resources/application.yaml
@@ -51,3 +51,9 @@ info:
     name: "accounts"
     description: "Eazy Accounts Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      eazy:
+        accounts: DEBUG
