--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -27,3 +27,9 @@ info:
     name: "gatewayserver"
     description: "Eazy gatewayserver Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      eazy:
+        gatewayserver: DEBUG
