--- a/accounts/src/main/resources/application.yaml
+++ b/accounts/src/main/resources/application.yaml
@@ -75,3 +75,15 @@ resilience4j-circuitbreaker:
     permittedNumberOfCallsInHalfOpenState: 2
     failureRateThreashold: 50
     waitDurationInOpenState: 10000
+
+resilience4j.retry:
+  configs:
+    default:
+      maxRetryAttempts: 3
+      waitDuration: 500
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      ignoreExceptions:
+        - java.lang.NullPointerException
+      retryException:
+        - java.util.concurrent.TimeoutException
