--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      timeout: 10s
+      retries: 10
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+    
   configserver:
     image: "qzy111/configserver:v8"
     container_name: ms-configserver
@@ -15,7 +27,7 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-    image: "qzy111/eurekaserver:v9"
+    image: "qzy111/eurekaserver:v10"
     container_name: ms-eurekaserver
     ports:
       - "8070:8070"
@@ -32,7 +44,7 @@ services:
       SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-    image: "qzy111/accounts:v9"
+    image: "qzy111/accounts:v10"
     container_name: ms-accounts
     ports:
       - "8080:8080"
@@ -49,7 +61,7 @@ services:
       service: microservice-eureka-config
 
   loans:
-    image: "qzy111/loans:v9"
+    image: "qzy111/loans:v10"
     container_name: ms-loans
     ports:
       - "8090:8090"
@@ -66,7 +78,7 @@ services:
       service: microservice-eureka-config
 
   cards:
-    image: "qzy111/cards:v9"
+    image: "qzy111/cards:v10"
     container_name: ms-cards
     ports:
       - "9000:9000"
@@ -83,7 +95,7 @@ services:
       service: microservice-eureka-config
 
   gatewayserver:
-    image: "qzy111/gatewayserver:v9"
+    image: "qzy111/gatewayserver:v10"
     container_name: ms-gatewayserver
     ports:
       - "8072:8072"
@@ -94,8 +106,14 @@ services:
         condition: service_healthy
       loans:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
+      SPRING_DATA_REDIS_CONNECT_TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
     extends:
       file: common-config.yml
       service: microservice-eureka-config
