--- a/cards/src/main/resources/application.yaml
+++ b/cards/src/main/resources/application.yaml
@@ -44,6 +44,9 @@ management:
       enabled: true
     refresh:
       enabled: true
+  metrics:
+    logs:
+      application: ${spring.application.name} 
  
 endpoints:
   shutdown:
