--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
@@ -57,7 +61,7 @@
 				<version>3.4.0</version>
 				<configuration>
 					<to>
-						<image>qzy111/${project.name}:v8</image>
+						<image>qzy111/${project.name}:v11</image>
 					</to>
 				</configuration>
 			</plugin>
