--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -25,6 +25,9 @@ management:
     health:
       probes:
         enabled: true
+  metrics:
+    logs:
+      application: ${spring.application.name} 
 
 server:
   port: 8071
