--- a/gatewayserver/pom.xml
+++ b/gatewayserver/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
@@ -79,7 +83,7 @@
 				<version>3.4.0</version>
 				<configuration>
 					<to>
-						<image>qzy111/${project.name}:v10</image>
+						<image>qzy111/${project.name}:v11</image>
 					</to>
 				</configuration>
 			</plugin>
